--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "concurrently \"cd backend && node server.js\" \"cd client && npm start\""
+    "start": "concurrently \"cd backend && npm install && node server.js\" \"cd client && npm install && npm start\""
   },
   "dependencies": {
     "concurrently": "^4.0.1"
